--- a/slides.tex
+++ b/slides.tex
@@ -220,8 +220,14 @@
 
 \begin{frame}
   \frametitle{A Protégé Plugin supporting these Techniques}
-% * manual axiom weakening
-% * configurable automatic remairs
+  \begin{items}
+    \begin{oitem}{\icon{puzzle-piece}}
+      Protégé plugin for axiom weakening \\
+      \sitem {\footnotesize allow computing weakening for specific axioms} \\
+      \sitem {\footnotesize enable automatic ontology repair}
+    \end{oitem}
+    \includegraphics[width=\textwidth]{resources/protege-both.png}
+  \end{items}
 \end{frame}
 
 \begin{frame}
@@ -232,7 +238,14 @@
 
 \begin{frame}
   \frametitle{Evaluation Results}
-  \includegraphics[width=\textwidth]{resources/iic-remove-ontology-bar.png}
+  \begin{items}
+    \begin{oitem}{\icon{chart-bar}}
+      Comparison between using axiom weakening and using removal \\
+      \sitem {\footnotesize significantly better for some ontologies} \\
+      \sitem {\footnotesize in many cases only minor or no improvement}
+    \end{oitem}
+    \includegraphics[width=\textwidth]{resources/iic-remove-ontology-bar.png}
+  \end{items}
 \end{frame}
 
 \begin{frame}
