--- a/slides.tex
+++ b/slides.tex
@@ -209,9 +209,9 @@
     \end{oitem}
     \begin{oitem}{\icon{balance-scale-left}}
       For comparing two repairs we define the IIC of $\Omc_1$ w.r.t $\Omc_2$ \\
-      \sitem {\footnotesize value close to $1$ for when $\Omc_1$ is better} \\
+      \sitem {\footnotesize value close to $1$ for when $\Omc_1$ is ``better''} \\
       \sitem {\footnotesize $0.5$ if both repairs are equally ``good''} \\
-      \sitem {\footnotesize value close to $0$ for when $\Omc_2$ is better}
+      \sitem {\footnotesize value close to $0$ for when $\Omc_2$ is ``better''}
     \end{oitem}
   \end{items}
 \end{frame}
